# aws-benchmark

./: Cargo.toml  README.md  services.txt
serde-aws-sdk/: Cargo.toml  README.md  index.md  versions.toml
serde-aws-sdk/sdk/aws-config/: Cargo.toml
serde-aws-sdk/sdk/aws-credential-types/: Cargo.toml
serde-aws-sdk/sdk/aws-endpoint/: Cargo.toml
serde-aws-sdk/sdk/aws-http/: Cargo.toml
serde-aws-sdk/sdk/aws-hyper/: Cargo.toml
serde-aws-sdk/sdk/aws-sig-auth/: Cargo.toml
serde-aws-sdk/sdk/aws-sigv4/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-async/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-checksums/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-client/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-eventstream/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-http/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-http-auth/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-http-tower/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-json/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-protocol-test/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-query/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-types/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-types-convert/: Cargo.toml
serde-aws-sdk/sdk/aws-smithy-xml/: Cargo.toml
serde-aws-sdk/sdk/aws-types/: Cargo.toml
serde-aws-sdk/sdk/batch/: Cargo.toml  README.md
serde-aws-sdk/sdk/cloudcontrol/: Cargo.toml  README.md
serde-aws-sdk/sdk/config/: Cargo.toml  README.md
serde-aws-sdk/sdk/dynamodb/: Cargo.toml  README.md
serde-aws-sdk/sdk/ec2/: Cargo.toml  README.md
serde-aws-sdk/sdk/ecs/: Cargo.toml  README.md
serde-aws-sdk/sdk/glacier/: Cargo.toml  README.md
(+6853 files in other folders)
