[package]
name = "aws-benchmark"
version = "0.1.0"
edition = "2021"

[workspace]
exclude = ["./serde-aws-sdk"]

[dependencies]
aws-benchmark-remove = { path = "./aws-benchmark-remove" }
aws-benchmark-common = { path = "./aws-benchmark-common" }
aws-benchmark-setup = { path = "./aws-benchmark-setup" }
