[workspace]
exclude = [
    "tests/aws-smithy-runtime-test",
    "tests/no-default-features",
    "tests/using-native-tls-instead-of-rustls"
]
members = [
    "sdk/aws-config",
    "sdk/aws-credential-types",
    "sdk/aws-endpoint",
    "sdk/aws-http",
    "sdk/aws-hyper",
    "sdk/aws-sig-auth",
    "sdk/aws-sigv4",
    "sdk/aws-smithy-async",
    "sdk/aws-smithy-checksums",
    "sdk/aws-smithy-client",
    "sdk/aws-smithy-eventstream",
    "sdk/aws-smithy-http",
    "sdk/aws-smithy-http-auth",
    "sdk/aws-smithy-http-tower",
    "sdk/aws-smithy-json",
    "sdk/aws-smithy-protocol-test",
    "sdk/aws-smithy-query",
    "sdk/aws-smithy-runtime",
    "sdk/aws-smithy-runtime-api",
    "sdk/aws-smithy-types",
    "sdk/aws-smithy-types-convert",
    "sdk/aws-smithy-xml",
    "sdk/aws-types",
    "sdk/batch",
    "sdk/cloudcontrol",
    "sdk/config",
    "sdk/dynamodb",
    "sdk/ec2",
    "sdk/ecs",
    "sdk/glacier",
    "sdk/iam",
    "sdk/kms",
    "sdk/lambda",
    "sdk/polly",
    "sdk/qldbsession",
    "sdk/resourceexplorer2",
    "sdk/route53",
    "sdk/s3",
    "sdk/s3control",
    "sdk/sso",
    "sdk/sts",
    "sdk/transcribestreaming"
]